# LLM_deployment

./: .gitignore  Makefile  vllm-runpod-deployment.plan.md
.github/workflows/: build-and-push-qwen-serve.yml  build-and-push-ray.yml  build-and-push.yml
gta1_serve/: .dockerignore  Makefile  Makefile.ray  README.md  curl_test_runpod.sh  pyproject.toml
gta1_serve/docker/: Dockerfile.ray  Dockerfile.runtime  entrypoint.ray.sh  entrypoint.sh
gta1_serve/src/: model_serving.py  server_mp.py  utils_mm.py
gta1_serve/tools/: draw_clicks.py
qwen3-vl-30b-a3b-thinking/gateway/: main.py  requirements.txt
qwen3-vl-30b-a3b-thinking/qwen3-vl-serve/: Dockerfile.qwen  entrypoint.sh
qwen3-vl-30b-a3b-thinking/tests/: requirements.txt  test_gateway_responses_fallback.py  test_splitter.py  test_sse_passthrough.py
